initial index creation

--- a/indexh.html
+++ b/indexh.html
@@ -5,7 +5,7 @@
 		<title>SANDBOX MODE ENGAGE</title>
 	</head>
 	<body>
-		<p><font size="5">Testing</font></p>
+		<p><font size="5">Testing..</font></p>
 		<p>Testing 2</p>
 	</body>
 </html>
