initial index creation

--- a/indexh.html
+++ b/indexh.html
@@ -4,10 +4,10 @@
 		<meta charset="UTF-8">
 		<title>SANDBOX MODE ENGAGE</title>
 	</head>
-	<body>
-		<p><font size="7">Testing...</font></p>
-		<p><font size="5">Testing...</font></p>
-		<p><font size="3">Testing...</font></p>
-		<p><font size="3">Test Complete</font></p>
+	<body bgcolor="black">
+		<p><font size="7" color="green">Testing...</font></p>
+		<p><font size="5" color="green">Testing...</font></p>
+		<p><font size="3" color="green">Testing...</font></p>
+		<p><font size="3" color="green">Test Complete</font></p>
 	</body>
 </html>
